[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "macher"
authors = [{name = "Robert Bock", email = "robertbock.98@googlemail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

dependencies = [
    "networkx>=3.1",
    "todoist-api-python>=2.0.2",
    "pyvis>=0.3.2"
]